--- a/app/src/main/res/navigation/nagivation_graph_3.xml
+++ b/app/src/main/res/navigation/nagivation_graph_3.xml
@@ -78,5 +78,14 @@
         android:id="@+id/congrats_3"
         android:name="com.example.leado.couse3Activities.Congrats_3"
         android:label="fragment_congrats_3"
-        tools:layout="@layout/fragment_congrats_3" />
+        tools:layout="@layout/fragment_congrats_3" >
+        <action
+            android:id="@+id/action_congrats_3_to_achievements_3"
+            app:destination="@id/achievements_3" />
+    </fragment>
+    <fragment
+        android:id="@+id/achievements_3"
+        android:name="com.example.leado.buttonNavigationActivites.Achievements_"
+        android:label="fragment_achievements_"
+        tools:layout="@layout/fragment_achievements_" />
 </navigation>
