--- a/app/src/main/res/navigation/navigation_graph_2.xml
+++ b/app/src/main/res/navigation/navigation_graph_2.xml
@@ -11,11 +11,8 @@
         android:label="fragment_congrats_2"
         tools:layout="@layout/fragment_congrats_2" >
         <action
-            android:id="@+id/action_congrats_2_to_awarenessRoom2_"
-            app:destination="@id/awarenessRoom2_" />
-        <action
-            android:id="@+id/action_congrats_2_to_profileFragment_2"
-            app:destination="@id/profileFragment_2" />
+            android:id="@+id/action_congrats_2_to_achievements_4"
+            app:destination="@id/achievements_4" />
     </fragment>
     <fragment
         android:id="@+id/lesson1_24"
@@ -87,13 +84,8 @@
             app:destination="@id/congrats_2" />
     </fragment>
     <fragment
-        android:id="@+id/awarenessRoom2_"
-        android:name="com.example.leado.couse2Activities.AwarenessRoom2_"
-        android:label="fragment_awareness_room2_"
-        tools:layout="@layout/fragment_awareness_room2_" />
-    <fragment
-        android:id="@+id/profileFragment_2"
-        android:name="com.example.leado.buttonNavigationActivites.ProfileFragment_"
-        android:label="fragment_profile_"
-        tools:layout="@layout/fragment_profile_" />
+        android:id="@+id/achievements_4"
+        android:name="com.example.leado.buttonNavigationActivites.Achievements_"
+        android:label="fragment_achievements_"
+        tools:layout="@layout/fragment_achievements_" />
 </navigation>
