--- a/app/src/main/res/layout/fragment_achievements_.xml
+++ b/app/src/main/res/layout/fragment_achievements_.xml
@@ -18,6 +18,7 @@
             android:layout_width="385dp"
             android:layout_height="411dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,16 +28,6 @@
             app:spanCount="1"
             android:layout_marginBottom="55dp"/>
 
-        <ImageButton
-            android:id="@+id/achievementsbackbtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="#00DDDDDD"
-            android:scaleX="2"
-            android:scaleY="2"
-            android:src="@drawable/back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView"
@@ -44,11 +35,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Achievements"
+            android:layout_marginTop="50dp"
             android:textColor="#100F0F"
             android:textSize="28sp"
             app:layout_constraintBottom_toTopOf="@+id/achievementsRecycler"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/achievementsbackbtn"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.157" />
 
         <TextView
